<resources>
    <string name="app_name">Schafskopfen - Calculator</string>

    <string name="hello_world">Schafskopfen - Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_player_newgame">Neues Spiel</string>
    <string name="action_player_new">Neue Spieler</string>
    <string name="action_change_money">Money ändern</string>
    <string name="action_game_back">Auswahl rückgänging</string>
    <string name="action_game_refresh">Refresh online </string>

</resources>
